tests/lean/isDefEqOffsetBug.lean.expected.out
isDefEqOffsetBug.lean:27:2-27:5: error: type mismatch
  rfl
has type
  0 + 0 = 0 + 0 : Prop
but is expected to have type
  0 + 0 = 0 : Prop
